--- a/wwwroot/css/default.css
+++ b/wwwroot/css/default.css
@@ -32,6 +32,7 @@ a { color:#808080; }
 .f-13 { font-size:13px !important; }
 .f-14 { font-size:14px !important; }
 .f-15 { font-size: 15px !important; }
+.whiteColor { color:#fff !important; }
 
 ::-webkit-scrollbar {  width: 6px; height:6px; }
 ::-webkit-scrollbar-track {  }
@@ -41,3 +42,4 @@ div:hover::-webkit-scrollbar-thumb { background:#888; }
 div.visible-scroll::-webkit-scrollbar-thumb { background:#888;}
 
 .btn-sm { font-size:12px; }
+input[type=radio] { position:relative; top:1px; margin:0 4px 0 0; }
